# GPT_API

./: .dockerignore  .gitignore  AGENTS.md  CHECKLIST.md  Cargo.toml  DEVELOPER.md  Dockerfile  LICENSE  LOGGING.md  Qwen_Rust_Analysis.md  README.md  config.py  config.yaml  fixes.md  main.py  openai_api.tar  record.db  record.db-journal  requirements.txt  run.sh  service-manager.sh  settings.py
.github/workflows/: ci.yml  release.yml
algo_sdk/: __init__.py
config/: config.yaml
docs/: metrics_analysis_report.md  streaming_latency_fix.md  tps_metrics_analysis.md
src/: app_error.rs  lib.rs  logging.rs  main.rs
src/client/: client_manager.rs  mod.rs  proxy.rs  routing.rs
src/config/: config_manager.rs  mod.rs  types.rs
src/db/: mod.rs  records.rs
src/handlers/: anthropic_stream_handler.rs  audio_handler.rs  chat_handler.rs  common_handler.rs  mod.rs  model_handler.rs  responses_stream_handler.rs  stream_handler.rs  thinking_transformer.rs  utils.rs
src/metrics/: active_requests.rs  debug_timing.rs  exporter.rs  middleware.rs  mod.rs  prometheus.rs  sliding_window.rs  worker.rs
src/middleware/: access_log.rs
src/models/: mod.rs  payload.rs  requests.rs
src/routes/: audio.rs  chat.rs  completions.rs  embeddings.rs  extras.rs  general.rs  health.rs  messages.rs  mod.rs  models.rs  responses.rs
src/services/: dispatcher.rs  mod.rs  models_cache.rs
src/state/: app_state.rs
utils/: api_handler.py  client_handler.py  db_handler.py  log.py  path_tree.py  request_handler.py
